[tool.poetry]
name = "badapple"
version = "0.1.0"
description = "Transfrom a video to the character video in terminal."
authors = ["Jing-yilin <yilin.jing.ai@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0"
Pillow = "^9.5.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
